@@ -3,9 +3,10 @@ v3.3.5.alpha
  * [PERF] Give up after scanning first 50k of the response in RUM
    auto-instrumentation.
  * [FIX] Don't raise when extracting metrics from SQL queries with non UTF-8 bytes.
- * Replaced "Custom/DJ Locked Jobs" metric with three new metrics for
+ * Replaced "Custom/DJ Locked Jobs" metric with new metrics for
    monitoring DelayedJob: queue_length, failed_jobs, and locked_jobs, all under
-   Workers/DelayedJob
+   Workers/DelayedJob.  queue_length is also broken out by queue name or priority
+   depending on the version of DelayedJob deployed.
 
 v3.3.4.1
  * Bug fix when rendering empty collection in Rails 3.1+
